2009-12-29  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32778

        Changes $diffPercentage to be a number to resolve Perl
        warning about comparing a string to a number.

        * Scripts/run-webkit-tests:

2009-12-29  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Eric Seidel.

        [Qt] DRT: Frame loader callbacks differ from the Mac port
        https://bugs.webkit.org/show_bug.cgi?id=32989

        Remove messages from the callbacks that should not dump them to match
        the expected results for the http/loading tests.

        Unskip some http/loading tests which succeed now.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dump):

2009-12-29  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        [Qt] fix fast/dom/Window/window-onFocus.html
        
        Add support for layouttestcontroller.windowIsKey to Qt DRT and fix issue where
        window.onblur was getting dispatched twice from QtWebKit.
        
        https://bugs.webkit.org/show_bug.cgi?id=32990

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::switchFocus):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setWindowIsKey):
        (LayoutTestController::setMainFrameIsFirstResponder):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2009-12-28  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Maciej Stachowiak.

        Extended EventSender.keyDown method to take another (3rd) argument
        for indicating the keyLocation to make numeric pad key events testable.
        Expected values for the argument is one of the KeyLocationCode
        specified in DOM Level 3
        (http://www.w3.org/TR/DOM-Level-3-Events/#events-keyboardevents).