@@ -782,6 +782,11 @@ static WebKitWebView* createWebView()
                      "signal::close-window", webInspectorCloseWindow, 0,
                      NULL);
 
+    if (webView) {
+        WebKitWebSettings* settings = webkit_web_view_get_settings(webView);
+        webkit_web_view_set_settings (view, settings);
+    }
+
     return view;
 }
 
